# memory-search-mcp

./: .cursorrules  .mcp.json  Dockerfile  README.md  SKILL.md  acp.json  glama.json  llms.txt  mcp.json  package.json  pyproject.toml  server.json  server.py  smithery.yaml
.github/workflows/: codeql.yml  mcp-smithery-publish.yml  scorecard.yml  test.yml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
