[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-search-mcp"
version = "1.0.0"
description = "MEOK AI Labs — memory-search-mcp MCP Server"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
keywords = ["mcp", "ai", "meok", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/memory-search-mcp"
Issues = "https://github.com/CSOAI-ORG/memory-search-mcp/issues"

[project.scripts]
memory-search-mcp = "memory_search_mcp.server:main"
